--- a/src/component/CulturePage/Events2/style.css
+++ b/src/component/CulturePage/Events2/style.css
@@ -7,7 +7,7 @@
 .event-col {
   width: 500px;
   max-width: none;
-  margin-top: -65px;
+  margin-top: -2.25vw;/*-65px;*/
 }
 
 .moral-budget-title {
@@ -22,7 +22,7 @@
 }
 
 .moral-budget-text {
-  width: 400px;
+  width: 500px;
   color: black;
   font-size: 20px;
   line-height: 30px;
