--- a/src/component/CulturePage/Inclusion/style.css
+++ b/src/component/CulturePage/Inclusion/style.css
@@ -16,7 +16,7 @@
 }
 .text-div-inclusion {
   padding: 0 50px 0 100px;
-  margin-top: 180px;
+  margin-top: 11.5vw;
   width: 650px;
   display: flex;
   flex-direction: column;
