--- a/src/component/CulturePage/IntroSection/style.css
+++ b/src/component/CulturePage/IntroSection/style.css
@@ -10,7 +10,7 @@
 .generateMascotContainer {
   position: absolute;
   left: 650px;
-  top: -2px;
+  top: /*-2px;*/ 1.5vw;
 }
 
 .generateMascot {
@@ -21,7 +21,7 @@
 .our-culture-quote-positioning {
   position: absolute;
   left: 510px;
-  top: 267px;
+  top: 19.5vw; /*max(21vw, 267px);*/
   min-height: 200px;
   height: 160px;
   min-width: 400px;
@@ -42,7 +42,7 @@
 .our-culture-big-positioning {
   position: absolute;
   left: 10px;
-  top: 275px;
+  top: 20.75vw; /*max(22vw, 275px);*/
   min-height: 200px;
   height: 150px;
   min-width: 400px;
